Fixes #34
Decrease placeholder width so that the gap between the nav bar and the
boxes below is decreased. This is because the width of the placeholders
fills the entire width of the row and spill into the next row, adding
extra space between the nav bar and the boxes.

--- a/public/css/audience/nav_bar.css
+++ b/public/css/audience/nav_bar.css
@@ -52,7 +52,7 @@
 
 .voices-audience-navbar-nav-placeholders {
 	display: inline-block;
-	width: 85px;
+	width: 80px;
 }
 
 /* For hyperlinks */
